# atf_nav_test_config

./: README.md  catkin_make.sh  copy.sh
additional/: Pth Application  Pth Cob  Pth Mimic  (+3 more)
atf_nav_test_bringup/: CMakeLists.txt  package.xml
atf_nav_test_bringup/launch/: application.launch  application.xml  line_passage.launch  line_passage_obstacle.launch  line_passage_person_moving.launch  line_passage_spawn_obstacle.launch  logging.launch  narrow_passage_2_cone.launch  rviz.launch  t_passage.launch  t_passage_obstacle.launch
atf_nav_test_bringup/scripts/: alert_error.py  fake_gui.py  robot_status_retriever.py  start_error_monitor.py  start_machine.py  state_machine_monitor.py
atf_nav_test_bringup/test/: roslaunch_check_application.xml  test_continuous_navigation.py
atf_nav_test_env_config/: CMakeLists.txt  README.md  package.xml  upload_navigation_goals.launch  upload_object_locations.launch
atf_nav_test_env_config/envs/empty/: categories.csv  navigation_goals.yaml  static_contacts.yaml
atf_nav_test_env_config/envs/line_passage/: map.yaml  object_locations.yaml  path_segments.yaml  path_segments.yaml~
atf_nav_test_env_config/envs/line_passage/line_maps/: laserline.yaml
atf_nav_test_env_config/envs/line_passage/statemachine/: tts_monologs.yaml
atf_nav_test_env_config/envs/line_passage_obstacle/: categories.csv  map.yaml  object_locations.yaml  path_segments.yaml  station_localizer.yaml
atf_nav_test_env_config/envs/line_passage_obstacle/line_maps/: laserline.yaml
atf_nav_test_env_config/envs/line_passage_obstacle/pose_maps/: lasercorner.yaml
atf_nav_test_env_config/envs/line_passage_person_moving/: map.yaml  object_groups.yaml  path_segments.yaml  planogram.csv
atf_nav_test_env_config/envs/line_passage_person_moving/line_maps/: laserline.yaml
atf_nav_test_env_config/envs/line_passage_spawn_obstacle/: map.yaml  nav_blacklist.yaml  object_groups.yaml  object_locations.yaml  path_segments.yaml  planogram_corrected.csv  sm_settings.yaml  static_contacts.yaml
atf_nav_test_env_config/envs/line_passage_spawn_obstacle/line_maps/: laserline.yaml
atf_nav_test_env_config/envs/narrow_passage_2_cone/: command_gui_buttons.yaml  dump.yaml  map.yaml  navigation_goals.yaml  object_groups.yaml  object_locations.yaml  offers.csv  path_segments.yaml  static_contacts.yaml  station_localizer.yaml
atf_nav_test_env_config/envs/narrow_passage_2_cone/line_maps/: laserline.yaml  lineMap_narrow_passage_2_cone.yaml
atf_nav_test_env_config/envs/narrow_passage_2_cone/statemachine/: offers.yaml
atf_nav_test_env_config/envs/t_passage/: map.yaml  object_groups.yaml  path_segments.yaml
atf_nav_test_env_config/envs/t_passage_obstacle/: map.yaml  path_segments.yaml  path_segments_old.yaml
atf_nav_test_env_config/envs/t_passage_obstacle/line_maps/: laserline.yaml
atf_nav_test_env_config/envs/t_passage_obstacle/point_maps/: lasermarker.yaml
atf_nav_test_env_config/envs/t_passage_obstacle/statemachine/: tts_sentences.yaml
atf_nav_test_env_config/test/: check_categories.test  csv_categories_checker.py
atf_nav_test_gazebo_worlds/: CMakeLists.txt  package.xml
atf_nav_test_gazebo_worlds/Media/materials/scripts/: custom.material
atf_nav_test_gazebo_worlds/Media/models/: box_1x1x1.STL  line_passage.STL  line_passage_obstacle.STL  line_passage_spawn_obstacle.STL  narrow_passage_1_cone.STL  narrow_passage_2_cone.STL  saturn-ingolstadt-v2-1.stl  saturn-ingolstadt.stl  t_passage.STL  t_passage_obstacle.STL
atf_nav_test_gazebo_worlds/launch/: line_passage.xml  line_passage_obstacle.xml  line_passage_person_moving.xml  line_passage_spawn_obstacle.xml  narrow_passage_2_cone.xml  t_passage.xml  t_passage_obstacle.xml
atf_nav_test_gazebo_worlds/objects/: box_1x1x1.urdf
atf_nav_test_gazebo_worlds/urdf/line_passage/: line_passage.urdf.xacro
atf_nav_test_gazebo_worlds/urdf/line_passage_obstacle/: line_passage_obstacle.urdf.xacro  line_passage_obstacle.xacro
atf_nav_test_gazebo_worlds/urdf/line_passage_person_moving/: line_passage_person_moving.urdf.xacro
atf_nav_test_gazebo_worlds/urdf/line_passage_spawn_obstacle/: line_passage_spawn_obstacle.urdf.xacro
atf_nav_test_gazebo_worlds/urdf/narrow_passage_2_cone/: narrow_passage_2_cone.urdf.xacro
atf_nav_test_gazebo_worlds/urdf/t_passage/: t_passage.urdf.xacro
atf_nav_test_gazebo_worlds/urdf/t_passage_obstacle/: t_passage_obstacle.urdf.xacro
atf_nav_test_gazebo_worlds/worlds/: empty.world  testszenario1.world
atf_nav_test_navigation_config/: CMakeLists.txt  package.xml
atf_nav_test_navigation_config/envs/line_passage/nav/: ipa_loc_feature_map_server.yaml  sensor_setup.yaml
atf_nav_test_navigation_config/envs/line_passage_spawn_obstacle/nav/: ipa_loc_feature_source_laser.yaml  ipa_loc_grid_to_feature_map_converter.yaml  path_segment_planner.yaml
atf_nav_test_navigation_config/envs/narrow_passage_2_cone/nav/: path_segment_server.yaml
atf_nav_test_navigation_config/envs/t_passage/nav/: ipa_loc_feature_association.yaml
atf_nav_test_navigation_config/envs/t_passage_obstacle/nav/: localgrids_params.yaml
atf_nav_test_navigation_config/robots/: cob4-7
atf_nav_test_navigation_config/robots/cob4-2/nav/: ipa_loc_dead_reckoning.yaml  ipa_loc_feature_fusion_ekf.yaml  ipa_loc_feature_source_laser.yaml  ipa_nav_eband_motion_filter.yaml  laserscan_zone_filter.yaml  move_base_eband_params.yaml  move_base_global_costmap_model_params.yaml  move_base_local_costmap_model_params.yaml  move_base_params.yaml
atf_nav_test_people/: CMakeLists.txt  package.xml
atf_nav_test_people/config/: poi.yaml
atf_nav_test_people/launch/: poi.launch
atf_nav_test_people/src/: person_of_interest_filter.py
catkin_pkgs/line_passage_spawn_obstacle/: CMakeLists.txt  package.xml
catkin_pkgs/line_passage_spawn_obstacle/config/test_configs/: test1.yaml
catkin_pkgs/line_passage_spawn_obstacle/launch/: application.launch
catkin_pkgs/line_passage_spawn_obstacle/scripts/: application.py
catkin_pkgs/t_passage/: CMakeLists.txt  package.xml
catkin_pkgs/t_passage/launch/: application.launch
catkin_pkgs/t_passage/scripts/: application.py
(+63 files in other folders)
