<?xml version="1.0"?>
<package format="2">
  <name>atf_nav_test_gazebo_worlds</name>
  <version>0.0.0</version>
  <description>This package provides some worlds for gazebo simulation.</description>

  <license>private</license>

  <maintainer email="marcel.albus@ipa.fraunhofer.de">Marcel Albus</maintainer>
  <author email="marcel.albus@ipa.fraunhofer.de">Marcel Albus</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslaunch</depend>

  <exec_depend>cob_gazebo_worlds</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>
</package>
