<?xml version="1.0"?>
<package format="2">
    <name>t_passage</name>
    <version>0.1.0</version>
    <description>ATF app for testing navigation.</description>

    <maintainer email="florian.weisshardt@ipa.fraunhofer.de">Florian Weisshardt</maintainer>

    <author email="florian.weisshardt@ipa.fraunhofer.de">Florian Weisshardt</author>

    <license>Apache 2.0</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>atf_core</depend>
    <depend>roslaunch</depend>
    <depend>rospy</depend>
    <depend>rostopic</depend>

    <test_depend>rostest</test_depend>

</package>
